--- a/_posts/2021-03-09-food-part-1.markdown
+++ b/_posts/2021-03-09-food-part-1.markdown
@@ -88,7 +88,7 @@ No wonder I felt like shit, and now I'm gonna have to lay down for a few hours, 
 
 ## Where do we go from here?
 
-I've tried really hard to not let this situtation bother me the past few years: I say to myself, well, this is the hand that was dealt to you, play it, but I won't deny that it's both depressing and difficult: it's really difficult to have to examine, check, and think through every item you eat when it comes to breakfast, lunch, and dinner.  It's even harder when the list is so long that you can't even keep it in your head: it's just *too much stuff* that I have to print out a list of things to check for.   I can't even imagine a traditional academic life where I have to travel to conferences: last time I had to travel, the ACM told me they could handle a gluten-free person OR a dairy-free person, but not both.  I bet they couldn't even comprehend someone with the level of shit I have to avoid.
+I've tried really hard to not let this situtation bother me the past few years: I say to myself, well, this is the hand that was dealt to you, play it, but I won't deny that it's both depressing and difficult: it's really *draining* to have to examine, check, and think through every item you eat when it comes to breakfast, lunch, and dinner.  It's even harder when the list is so long that you can't even keep it in your head: it's just *too, too much stuff* that I have to print out a list of things to check for.   I can't even imagine a traditional academic life where I have to travel to conferences: in fact, the last time I had to travel, the ACM told me they could handle a gluten-free person OR a dairy-free person, but not both.  Based on this, there's not expectation that they would even comprehend someone with the level of shit I have to avoid.
 
 The way I saw it previously, is pretty easy to comprehend from an avoidance strategy:
 
