--- a/_posts/2021-03-09-food-part-1.markdown
+++ b/_posts/2021-03-09-food-part-1.markdown
@@ -97,7 +97,7 @@ The way I saw it previously, is pretty easy to comprehend from an avoidance stra
 
 However, that's obviously not the whole story for me now: IBS requires I avoid gluten and onion, and since I don't feel well still, I still need to go further.
 
-Now I need to do another eliminiation diet, and the list of foods is *35* items long; obviously I'll start the elimination diet with the ones at the top of the list.  Sounds easy?  It's not.  I'm sure many of you just pickup foods without even thinking: yeah, I don't do that.  Honestly, food shopping and preparation for the week and checking items is more stressful than programming for me now -- in jest, I'd say implementing Paxos is easier for me at this point.
+Now, I need to do another eliminiation diet and the list of foods is *35* items long; obviously I'll start the elimination diet with the ones at the top of the list.  Sounds easy?  It's not.  I'm sure many of you just pickup foods without even thinking: yeah, I don't do that.  Honestly, food shopping and preparation for the week and checking items is more stressful than programming for me now -- in jest, I'd say implementing Paxos is easier for me at this point.
 
 But, the question is -- what the hell do I actually eat?
 
