--- a/_posts/2021-03-09-food-part-1.markdown
+++ b/_posts/2021-03-09-food-part-1.markdown
@@ -101,7 +101,7 @@ But, the question is -- what the hell do I actually eat?
 
 ## Recipes
 
-At the start of the coronavirus quarantine, I spent a lot of time buying and
+At the start of the coronavirus quarantine, when I was trying to learn to cook things I could eat, I spent a lot of time buying and
 reading cookbooks. I picked cuisines that minimized on dairy (due to
 availability or regional restrictions, etc.) and gluten (for similar
 reasons.) I bought vegan cookbooks -- but had to skip the soy and gluten, I
