--- a/_posts/2021-03-09-food-part-1.markdown
+++ b/_posts/2021-03-09-food-part-1.markdown
@@ -104,15 +104,15 @@ But, the question is -- what the hell do I actually eat?
 At the start of the coronavirus quarantine, when I was trying to learn to cook things I could eat, I spent a lot of time buying and
 reading cookbooks. I picked cuisines that minimized on dairy (due to
 availability or regional restrictions, etc.) and gluten (for similar
-reasons.) I bought vegan cookbooks -- but had to skip the soy and gluten; I
+reasons.) I bought vegan cookbooks -- but had to skip the soy and gluten, I
 bought vegetarian cookbooks and adjusted accordingly. I bought gluten-free
 baking cookbooks. I adapted as many recipes I could using alternate
 ingredients to cook them soy-free, garlic-free, onion-free, and gluten-free.
 This seemed to work well for me, but I'd never have anyone over because I'm
 pretty sure that the food was tasteless -- at this point food is merely
-something that I cook because I *have* to eat to survive. (In many ways, this
-makes me quite sad because I did spend most of my money eating out because I
-loved travel and food -- but, I digress.) 
+something that I cook because I *have* to eat to survive. 
+
+_(As someone who started a Ph.D. in Europe with the goal of teaching in Paris for the food, this is a life-changing moment.)_
 
 This doesn't work anymore. There's no way to adapt recipes that require eggs
 as a core ingredient at this point -- there's no cookbook that fits this
