--- a/_posts/2023-08-28-3-10-years.markdown
+++ b/_posts/2023-08-28-3-10-years.markdown
@@ -5,7 +5,7 @@ date:   2023-08-27 08:00:00 -0000
 categories: filibuster
 ---
 
-June 03, 2023 marks _10 years_ since I started this blog: it's sort of mind blowing, honestly.  
+June 03, 2023 marks _10 years_ since I started my blog, and, it's sort of mind blowing, honestly.  
 
 When I go back and look at my old posts on my blog, well, it's quite fitting that my *first blog post* was on fault injection and fault tolerance, because that's the topic that ultimately became my Ph.D. research, of which I've been focused on since 2015... but really since 2018.  
 
