--- a/_posts/2023-08-28-3-10-years.markdown
+++ b/_posts/2023-08-28-3-10-years.markdown
@@ -13,11 +13,11 @@ Since creation of this blog, I've been lucky to have _many_ of these posts make 
 
 But, perhaps what is most interesting to me, is that the genesis of this blog was at the exact moment that I first ventured into research.  When I started my dream in 2013, my goal was to work at Microsoft Research.  When I started my Ph.D. in 2015, my goal was to be a professor in France.  In 2018, I thought I might be a teaching professor in the US.  Things change: shit, it's 10 years!
 
-In some ways, it is fitting that this 10 year mark corresponds with the year that I will (ideally) defend my Ph.D. at Carnegie Mellon University.
+In some ways, it is fitting that this 10 year milestone corresponds with the year that I will (ideally) defend my Ph.D. at Carnegie Mellon University.  If not this year, early next year at the latest.
 
 ### The Inticement of Research
 
-I started this blog as a Software Engineer at Basho Technologies, a no-defunct distributed system company primarily focused on writing a fault-tolerant, highly scalabile distributed database in Erlang.  At Basho at the time, I was a JavaScript developer building the UX for the distributed database, Riak.  I barely knew Erlang --- only enough to maintain a job where I had to produce JSON from Erlang to build the UX for Riak --- and, barely knew JavaScript.  However, I was not new to programming: I had been a software engineer and systems engineer, and even a software engineering manager, for many years before this.  But, when I became a manager, I decided it wasn't for me and I wanted to be a programmer again and restarted my career -- the term IC didn't really exist at this time.  I slowly moved from being primarily a TCL programmer for web applications (ArsDigita represent) to a Ruby programmer, to finally, a JavaScript developer.
+I started this blog as a Software Engineer at Basho Technologies, a now-defunct distributed systems company that was primarily focused on writing a fault-tolerant, highly scalabile distributed database in Erlang.  At the time, I was a JavaScript developer building the UX for Basho's distributed database, Riak.  I did not know Erlang --- only enough to maintain a job where I had to produce JSON from Erlang to build the UX for Riak --- and, I barely knew JavaScript.  However, I was not new to programming as I had been a software engineer, systems engineer, and even a software engineering manager for many years before coming to Basho.  But, I ended up here because when I became a manager, I decided it wasn't for me and I wanted to be a programmer again and restarted my career from the beginning as a junior developer and working my way back up.  I slowly moved from being primarily a TCL programmer for web applications (ArsDigita represent), to manager, back down again to a Ruby programmer, and up again, to finally, a JavaScript developer at Basho.
 
 I really knew nothing of distributed systems at the time.  I didn't read my first distributed systems paper until 2012.
 
