--- a/_posts/2023-08-28-3-10-years.markdown
+++ b/_posts/2023-08-28-3-10-years.markdown
@@ -21,7 +21,7 @@ I started this blog as a Software Engineer at Basho Technologies, a now-defunct 
 
 I really knew nothing of distributed systems at the time.  I didn't read my first distributed systems paper until 2012.
 
-However, by 2013, I was very interested in Erlang and distributed systems and through merely playing around in my spare time, wandered into the area of fault injection and fault tolerance.  My [first](https://christophermeiklejohn.com/erlang/2013/06/03/erlang-pg2-failure-semantics.html) and [second](https://christophermeiklejohn.com/erlang/2013/06/05/erlang-gproc-failure-semantics.html) blog posts were specifically on this very topic.  I did not know at all what I was doing -- as I've said numerous times in the past, writing is a way for me to understand something and I write specifically to help clarify my own thinking on a topic.
+However, by 2013, I was very interested in both Erlang and distributed systems and by merely playing around in my spare time, had wandered into the area of fault injection and fault tolerance.  My [first](https://christophermeiklejohn.com/erlang/2013/06/03/erlang-pg2-failure-semantics.html) and [second](https://christophermeiklejohn.com/erlang/2013/06/05/erlang-gproc-failure-semantics.html) blog posts were specifically on this very topic.  I did not know at all what I was doing -- as I've said numerous times in the past, writing is a way for me to understand something and I write specifically to help clarify my own thinking on a topic.  In short, I found something that was interesting, started writing about it, and then wrote code to figure it out.
 
 In 2013, I decided I wanted to start grad school to _really_ learn about a programming topic, as as I was living in Rhode Island, reached out to Brown University, where some members of my family had atteneded.  They wanted nothing to do with me for several reasons: a.) I didn't have a degree in CS, because I got one in IT part-time at Northeastern University after getting an associates' degree at the Community College of Rhode Island; and b.) I had no research experience.  I was told "no research potential" by one prominant faulty member, which reminded me of Zappa's infamous "no commercial potential" response.  Finally, after reaching out to a professor at Brown based on a paper he published that I had reimplemented for fun, I got permission to enroll in courses as a "special student."
 
