--- a/_posts/2023-08-28-3-10-years.markdown
+++ b/_posts/2023-08-28-3-10-years.markdown
@@ -11,29 +11,27 @@ When I go back and look at my old posts on my blog, well, it's quite fitting tha
 
 Since creation of this blog, I've been lucky to have _many_ of these posts make the front page of Hacker News and Lobsters, which at minimum encouraged me to keep going.  The visibility has been instrumental to my career, despite the (sometimes) negative comments, but, wow... what a ride it has been.
 
-But, perhaps what is most interesting to me, is that the genesis of this blog was at the exact moment that I first ventured into research.  When I started my dream in 2013 --- when I started this blog sitting in a wicker chair in the corner of the living room of my close friend Greg in San Francisco with a re-run of _Friends_ on in the background --- my goal was to work at Microsoft Research.  When I started my Ph.D. in 2015, my goal was to be a professor in France.  In 2018, I thought I might be a teaching professor in the US.  Things change: shit, it's 10 years!
+But, perhaps what is most interesting to me, is that the genesis of this blog was at the exact moment that I first ventured into research.  When I started my dream in 2013 --- when I started this blog sitting in a wicker chair in the corner of the living room of my close friend Greg in San Francisco with a re-run of _Friends_ on in the background --- my goal was to work at Microsoft Research.  When I started my Ph.D. in 2015, my goal was to be a professor in France.  In 2018, I thought I might be a teaching professor in the US.  In 2023: ??? Things change: shit, it's been only 10 years!
 
 In some ways, it is fitting that this 10 year milestone corresponds with the year that I will (ideally) defend my Ph.D. at Carnegie Mellon University.  If not this year, early next year at the latest.
 
 ### The Inticement of Research
 
-I started this blog as a Software Engineer at Basho Technologies, a now-defunct distributed systems company that was primarily focused on writing a fault-tolerant, highly scalabile distributed database in Erlang.  At the time, I was a JavaScript developer building the UX for Basho's distributed database, Riak.  I did not know Erlang --- only enough to maintain a job where I had to produce JSON from Erlang to build the UX for Riak --- and, I barely knew JavaScript.  However, I was not new to programming as I had been a software engineer, systems engineer, and even a software engineering manager for many years before coming to Basho.  But, I ended up here because when I became a manager, I decided it wasn't for me and I wanted to be a programmer again and restarted my career from the beginning as a junior developer and working my way back up.  I slowly moved from being primarily a TCL programmer for web applications (ArsDigita represent), to manager, back down again to a Ruby programmer, and up again, to finally, a JavaScript developer at Basho.
+I started this blog as a Software Engineer at Basho Technologies, a now-defunct distributed systems company that was primarily focused on writing a fault-tolerant, highly scalabile distributed database in Erlang.  At the time, I was a JavaScript developer building the UX for Basho's distributed database, Riak.  I did not know Erlang --- only enough to maintain a job where I had to produce JSON from Erlang to build the UX for Riak --- and, I barely knew JavaScript.  However, I was not new to programming as I had been a software engineer, systems engineer, and even a software engineering manager for many years before coming to Basho.  But, I ended up here because when I became a manager, I decided it wasn't for me and I wanted to be a programmer again and restarted my career from the beginning as a junior developer and working my way back up.  I slowly moved from being primarily a TCL programmer for web applications --- ArsDigita crew represent! --- to manager, and then back down again to a Ruby programmer, and up again, to finally, a JavaScript developer at Basho.
 
 I really knew nothing of distributed systems at the time.  I didn't read my first distributed systems paper until 2012.
 
 However, by 2013, I was very interested in both Erlang and distributed systems and by merely playing around in my spare time, had wandered into the area of fault injection and fault tolerance.  My [first](https://christophermeiklejohn.com/erlang/2013/06/03/erlang-pg2-failure-semantics.html) and [second](https://christophermeiklejohn.com/erlang/2013/06/05/erlang-gproc-failure-semantics.html) blog posts were specifically on this very topic.  I did not know at all what I was doing -- as I've said numerous times in the past, writing is a way for me to understand something and I write specifically to help clarify my own thinking on a topic.  In short, I found something that was interesting, started writing about it, and then wrote code to figure it out.
 
-In 2013, I decided I wanted to start grad school to _really_ learn about a programming area, as as I was living in Rhode Island, reached out to Brown University, where some members of my family had atteneded.  They wanted nothing to do with me for several reasons.  First, I didn't have a degree in CS, because I got one in IT part-time at Northeastern University after getting an associates' degree at the Community College of Rhode Island.  Second, I had no research experience.  I was told "no research potential" by one prominant faulty member, which reminded me of Zappa's infamous "no commercial potential" response.  Finally, after reaching out to a professor at Brown based on a paper he published that I had reimplemented for fun, I got permission to enroll in courses as a "special student."
+In 2013, I decided I wanted to start grad school to _really_ learn about a programming area, as as I was living in Rhode Island, reached out to Brown University, where some members of my family had atteneded.  They wanted nothing to do with me for several reasons.  First, I didn't have a degree in CS, because I got one in IT part-time at Northeastern University after getting an associates' degree at the Community College of Rhode Island.  Second, I had no research experience.  I was told "no research potential" by one prominant faulty member, which reminded me of Zappa's infamous "no commercial potential" response.  Finally, after reaching out to a professor at Brown based on a paper he published that I had reimplemented for fun -- and once I told him that I programmed Erlang in industry --- he gave me permission to enroll in courses as a "special student."
 
-A "special student" means a couple different things.  First, that you have to carry around a bright pink slip to all of your courses on the first day of classes begging to be admitted to the professor of the class, as you are not a degree student.  Second, that you have to pay your own way --- at the time, $6k a course.  I doubled down, got my slips signed, and blew a family inheritance to take my courses.  I took a database seminar (not knowing what a semniar was) and a programming language course with Coq (not knowing what Coq or programming language's really were, outside of writing programs.)
+A "special student" means a couple different things.  First, that you have to carry around a bright pink slip to all of your courses on the first day of classes begging to be admitted to the professor of the class, as you are not a degree student.  Second, that you have to pay your own way --- at the time, $6k a course.  I doubled down, got my slips signed, and blew a family inheritance to take my courses.  I took a database seminar (not knowing what a semniar was) and a programming language course with Coq (not knowing what Coq or programming language's really were, outside of writing programs.)  I got lucky in that both of my course projects were decent.  In fact, I dicussed one at RICON, the distributed systems conference in 2013: my work on writing CRDT proofs --- really, really, awful trivial proofs, but the first person to actually _try_ writing proofs for CRDTs --- and it seemingly got me noticed by many people in the field.  I was in!
 
-I got lucky in that both of my projects were decent.  In fact, I dicussed at RICON, the distributed systems conference in 2013, my work on writing CRDT proofs --- really, really, awful trivial proofs, but the first person to actually _try_ writing proofs for CRDTs --- and it seemingly got me noticed by many people in the field.  I was in!
+In 2014, Basho established a research consortium with a number of universities in the European Union to work on the development of CRDTs for use inside of Riak.  I wasn't invited, but several of my friends/colleagues were.  One January evening, lying in bed with the flu in my parents spare bedroom a few days after Christmas, I asked a colleague where they were going in Europe in a nondescript manner.  When I found out, I applied for a Delta credit card, bought a flight, booked an AirBnb in the city and just showed up there myself and said "hey, I'm with Basho."  From then on, I became involed in the research project in several capactities over time.
 
-In 2014, Basho established a research consortium with a number of universities in the European Union to work on the development of CRDTs for use inside of Riak.  I wasn't invited, but several of my friends were.  One January evening, lying in bed with the flu in my parents spare bedroom a few days after Christmas, I asked a colleague where they were going in Europe in a nondescript manner.  When I found out, I applied for a Delta credit card, bought a flight, booked an AirBnb and just showed up there myself and said "hey, I'm with Basho."  From then on, I became involed in the research project.  
+I got to work on various CRDT related research projects, ultimately building a new programming model and (partially) overseeing the development of a database called Floppystore, which became a database called Antidote DB.  I visited Rovio and a number of our other clients in various countries.  I gave talks at a bunch of conferences, collaborated with many different folks across organization and companies, and finally dissapointed with my job during the decline of Basho --- I was working on testing, which ultimately became my Ph.D. --- decided to quit my job and do a Ph.D. once I published my first research paper.  
 
-I got to work on various CRDT related research projects, ultimately building a new programming model and (partially) overseeing the development of a database called Floppystore, which became a database called Antidote DB.  I talked at a bunch of conferences, collaborated with many different folks, and dissapointed with my job during the decline of Basho --- I was working on testing, which ultimately becamse my Ph.D. --- decided to quit my job and do a Ph.D. once I published my first research paper.  
-
-At that point, it was on.  I literally donated all of my belongings that I had accumulated at 30 years old to charity, and with only a single suitcase and carry-on, moved to San Francisco for several months to work a contract job on formal verification, which I knew nothing about, and then when finished proceeded to move to Europe for my Ph.D.  
+At that point, it was _on_.  I literally donated all of my belongings that I had accumulated at 30 years old to charity, and with only a single suitcase and carry-on, moved to San Francisco for several months to work a contract job on formal verification --- which I knew nothing about --- and then when finished proceeded with my move to Europe for my Ph.D.  
 
 Things were looking up.
 
