--- a/_posts/2023-08-28-3-10-years.markdown
+++ b/_posts/2023-08-28-3-10-years.markdown
@@ -39,19 +39,21 @@ Things were looking up.
 
 Living in Europe had always been a dream of mine, ever since spending much of my Information Technology degree at Northeastern studying French film, French literature, and having spent much time in Paris with a former romatic partner of mine who was born there.  I loved the culture, the city, and fully embraced the lifestyle: it honestly felt like an absolute _dream_.  There was no place I would ever want to live.  My Ph.D., was nothing short of wonderful experiences: I spent weekends in various different cities, traveled to 20+ different universities giving talks on CRDTs, Erlang, and distributed systems, and met some of the most friendly and welcomining people that I will call friends for the rest of my life.
 
-However, my research progress was awful.  This wasn't to say that I wasn't doing research: I was writing code, building prototypes, showing off example applications, performing evaluations, etc.  In fact, when we finally presented our project results, I was one of the key presenters at our project review meeting in Brussels at the European Commission.  We had built a lot of software and it worked well, and it worked well at scale.  But, from the point of view of doing a Ph.D., I just felt stuck.  Perhaps my heart wasn't in CRDTs anymore: as it would seem, it wasn't and I completely abandoned it.
+However, my research progress was awful.  This wasn't to say that I wasn't doing research: I was writing code, building prototypes, showing off example applications, performing evaluations, etc.  In fact, when we finally presented our project results, I was one of the key presenters at our project review meeting in Brussels for the European Commission.  We had built a lot of software and it worked well, and it worked well at scale.  But, from the point of view of doing a Ph.D., I just felt stuck.  Perhaps my heart wasn't in CRDTs anymore: as it would seem, it wasn't and I completely abandoned it.
 
-Thankfully, I got an internship at Microsoft Research in Redmond, primarily thanks to my previous work on Erlang and actor systems.  This work, over the summer, is work that ultimately lead to the transactional semantics in Orleans, but it was a rough start.  When arriving at Microsoft, I didn't know what to do.  I wasn't used to the culture of _extremely, minimal supervision_ and spent the first month just drinking coffee and reading papers.  I didn't know transactions, I didn't know how they worked, I didn't know the names of all of the properties of isolation or whatever.
+Thankfully, I got an internship at Microsoft Research in Redmond, primarily thanks to my previous work on Erlang and actor systems.  This work, over the summer, is work that ultimately lead to the transactional semantics in Orleans, but it was a rough start.  When arriving at Microsoft, I didn't know what to do.  I wasn't used to the culture of _extremely, minimal supervision_ and spent the first month just drinking coffee and reading papers that I thought were relevant.  I didn't know transactions, I didn't know how they worked, I didn't know the names of all of the properties of isolation or whatever.
 
-Phil Berstein, however, was an incredible mentor.  He pointed me in the direections of the right papers, gave me his own copy of his book on transactions, and upon going home each night, I would sit and read as much as I could.  I started by benchmarking transactions, and each day as I learned more and more, I got better at figuring out how things worked, what each thing was called, and what each thing meant.  I absorbed every paper Phil even mentioned in passing, and tried to learn as much as I could.  I thought things were looking up and I was starting to feel more at home in my skin.  
+Phil Bernstein, however, was an incredible mentor.  He pointed me in the direections of the right papers, gave me his own copy of his book on transactions, and upon going home each night, I would sit and read as much as I could.  I started by benchmarking transactions, and each day as I learned more and more, I got better at figuring out how things worked, what each thing was called, and what each thing meant.  I absorbed every paper Phil even mentioned in passing, and tried to learn as much as I could.  I thought things were looking up and I was starting to feel more at home in my skin.  
 
 However, I was sick every single day of the week.  Horribly sick, every morning and spending each evening sick.
 
-I thought at first it was stress, but each day it because increasingly worse: I couldn't stay out of the bathroom.  Finally, after visiting several doctors and performing a number of experiments myself each day, I figured it out: I could no longer eat bread.  I lived in Europe, and I couldn't eat bread anymore without getting horribly sick.  
+I thought at first it was stress, but each day it became increasingly worse: I just couldn't stay out of the bathroom.  Finally, after visiting several doctors and performing a number of experiments myself each day with what I ate, I figured it out. 
+I could no longer eat bread.  
+I lived in Europe, and I couldn't eat bread anymore without getting horribly sick.  
 
-When my internship ended, it was time to return to Europe, but a condition of my Ph.D. grant (Erasmus) was that I had to switch universities every year and have two different Ph.D. advisors, so I returned to Belgium and after a few months headed off to Lisbon.  In Lisbon, I fared less well -- I knew French, but didn't know Portuguese, and I also had to communicate to everyone that I couldn't have dairy or gluten anymore.  Complicating this, my Ph.D. advisor in Lisbon wanted me to work on a different project than my Ph.D. advisor in Belgium did.  I was lost, between conflicting responsibilities from different advisors, while sick, in a place where I didn't speak the language.  I hobbled along for almost a year --- completely lost, depressed, sick, alone, and otherwise miserable --- and was lucky enough to be invited back to Microsoft Research.
+When my internship ended, it was time to return to Europe, but a condition of my Ph.D. grant (Erasmus) was that I had to switch universities every year and have two different Ph.D. advisors, so I returned to Belgium and after a few months headed off to Lisbon.  In Lisbon, I fared less well: I knew French, but didn't know Portuguese, and I also had to communicate to everyone that I couldn't have dairy or gluten anymore.  Complicating this, my Ph.D. advisor in Lisbon wanted me to work on a different project than my Ph.D. advisor in Belgium did.  I was lost, between conflicting responsibilities from different advisors, while sick, in a place where I didn't speak the language.  I hobbled along for almost a year --- completely lost, depressed, sick, alone, and otherwise miserable --- and was lucky enough to be invited back to Microsoft Research.
 
-At Microsoft Research this year, I was mentored by Sebastian Burckhardt, who was involved in our previous project as well and who has become a close friend of mine.  Sebastian, who I had known for a long time because he was extremely critical of my CRDT work years earlier, is an incredible human.  Just a fantastic mentor, great person, who helped me to grow in a number of ways.  Here, we took the ideas we developed in Orleans and built the first version of stateful serverless, which we open sourced at the time, and became Durable Entities on Azure.  Not only this, but Sebastian introduced me to Jonathan Goldstein at Microsoft, where I got to work with cutting edge database systems and help define part of that systems API.  I was eating gluten-free, things were great, and I was flying high.
+At Microsoft Research that year, I was mentored by Sebastian Burckhardt, who was involved in our previous project as well and who has since become a close friend of mine.  Sebastian, who I had known for a long time because he was extremely critical of my CRDT work years earlier, is an incredible human.  Just a fantastic mentor, great person, who helped me to grow in a number of ways.  Here, we took the ideas we developed in Orleans and built the first version of stateful serverless, which we open sourced at the time, and became Durable Entities on Azure.  Not only this, but Sebastian introduced me to Jonathan Goldstein at Microsoft, where I got to work with cutting edge database systems and help define part of that systems API.  I was eating gluten-free, things were great, and I was flying high.
 
 But, on return to Europe, I was miserable.  Back in the same place, with no direction, no clear end to the Ph.D., despite being in year 3 of my 3 year funding, and sick once again from being able to properly control my diet in the foreign land.  I spent a few months there, and upon returning to the United States, quit my Ph.D., via email, from a bar on Massachusetts Avenue in Cambridge in Massachusetts while watching a Boston Celtics game on the television.  I left all of my belongings, outside of what I could carry in a suitcase, in my apartment in Portugal, which my landlord claimed as payment for the security deposit.  I was lucky enough, that I had already accepted an offer for a return to Microsoft Research that summer, depsite having just quit my Ph.D.
 
