--- a/_posts/2023-08-28-3-10-years.markdown
+++ b/_posts/2023-08-28-3-10-years.markdown
@@ -57,9 +57,9 @@ At Microsoft Research that year, I was mentored by Sebastian Burckhardt, who was
 
 But, on return to Europe, I was miserable.  Back in the same place, with no direction, no clear end to the Ph.D., despite being in year 3 of my 3 year funding, and sick once again from being able to properly control my diet in the foreign land.  I spent a few months there, and upon returning to the United States, quit my Ph.D., via email, from a bar on Massachusetts Avenue in Cambridge in Massachusetts while watching a Boston Celtics game on the television.  I left all of my belongings, outside of what I could carry in a suitcase, in my apartment in Portugal, which my landlord claimed as payment for the security deposit.  I was lucky enough, that I had already accepted an offer for a return to Microsoft Research that summer, depsite having just quit my Ph.D.
 
-Upon return to Microsoft, things were great.  I corrected my diet, was living a place where I could control cross-contimation by not sharing a kitchen with other students, had a car to grocery shop, and was doing quite well.  However, from the research perspective, I was making less progress.  I was working on effects systems and capturing nondeterminism and built two different versions of the system -- one research with strong guarantees and one practical with fewer guranteees, which both worked --- but no one seemed particularily impressed.  I felt like I was doing very pratical useful work, but my research presentations were under-atteneded and no one seemed to really care.  I still felt lost.
+Upon return to Microsoft, things were great.  I corrected my diet, was living a place where I could control cross-contimation by not sharing a kitchen with other students, had a car to grocery shop, and was doing quite well.  However, from the research perspective, I was making less progress.  I was working on effects systems and capturing nondeterminism and built two different versions of the system -- one research with strong guarantees and one practical with fewer guranteees, which both worked --- but no one seemed particularily impressed.  I felt like I was doing very pratical useful work, but my research presentations were under-attended and no one seemed to really care.  I still felt lost.
 
-Not knowing what to do with what remained of my career, I was lucky enough to get enrolled at Northeastern University as Ph.D. student under Heather Miller, who I had known from many moon ago when she was a grad student and I was an industry participant at a PL summer school in Oregon.  However, by the time I finished up at Microsoft, she had left Northeastern and was on her way to Pittsburgh, PA, at Carnegie Mellon University.
+Not knowing what to do with what remained of my (non-existent) career, I was lucky enough to get enrolled at Northeastern University as Ph.D. student thanks to Heather Miller --- who I had known from many moon ago when she was a grad student and I was an industry participant at a PL summer school in Oregon, and who I organized the Curry On conferences at ECOOP with --- and who I had been working with on and off on projects while I was untethered in Boston since quitting, to promising success.  However, by the time I finished up at Microsoft, she had left Northeastern and was on her way to Pittsburgh, PA, at Carnegie Mellon University.
 
 Carnegie Mellon was a bit of an upgrade from a European university in Belgium and, especially for someone who Brown University considered had "no research potential."  And, it showed.  My first semester, I failed out of one of my courses and landed in the hospital for a full week: overwork, stress, and an improper diet had caused my pancreas to go into overdrive and I was at risk for pancreas failure.  However, with some rest, a course correction at CMU, things got back to normal and I was passing courses and doing good research.  I ended up taking my work on building an evaluation framework for our SyncFree work three years prior and turning it into a top-tier conference paper at USENIX ATC my first year at CMU.  Things were looking up, but I had absolutely no direction how to proceed.  This was soon to change.
 
